--- a/conf/translation/Surveys_nl.properties
+++ b/conf/translation/Surveys_nl.properties
@@ -1,4 +1,162 @@
 # GUIDELINES:
 # 1) Put here translations for 'surveys' (incl. 'profiles'): questions, actions, and all related translations;
 # 2) Always use a qualified name for your keys, indicating the location where the translation is used, and the type of translation.
+# GUIDELINES:
+# 1) Put here translations for 'surveys' (incl. 'profile and account informations'): questions, actions, and all related translations;
+# 2) Always use a qualified name for your keys, indicating the location where the translation is used, and the type of translation.
+# PERIOD
+period.1.label=NL_entre 17h et 18h
+period.2.label=NL_entre 18h et 19h
+period.3.label=NL_entre 19h et 20h
+# TOPICS
+topic.programs.label=NL_Programmes Gros Electroménager
+topic.presence.label=NL_Présence au domicile
+topic.heating.label=NL_Chauffage & eau chaude
+topic.lighting.label=NL_Eclairage & électroménager
+topic.dinner.label=NL_Repas
+# CONSUMER PROFILE
+Q1300.label=NL_<u>Combien de personnes</u> occupent votre logement (votre situation typique en hiver le soir)?
+Q1300.label.option20.warning=désolé la valeur maximale que vous pouvez mettre est 20
+Q1400.label=NL_Nombre de jours du lundi au vendredi où il n'y a <u>personne à la maison</u> avant 20h (resto, sortie, invitation, soirée ...)
+Q1400.option5.warning=Etes-vous sûr(e) qu'il n'y a quasiment jamais quelqu'un qui est présent avant 20h ?
+Q1500.label=NL_A quelle heure la première personne de votre ménage rentre-t-elle à la maison ? (votre situation typique en hiver)
+Q1500.options.0.label=NL_avant 17h
+Q1500.options.1.label=NL_entre 17h et 18h
+Q1500.options.2.label=NL_entre 18h et 19h
+Q1500.options.3.label=NL_entre 19h et 20h
+Q1500.options.4.label=NL_après 20h
+Q1110.label=NL_Combien de fois en semaine (du lundi au vendredi) le <u>lave-vaisselle</u> est-il lancé...
+Q1110.label.toomany.warning=vous êtes sûr? Il nous semble que vous démarrer cette application excessivement souvent
+Q1120.label=NL_Combien de fois en semaine (du lundi au vendredi) le <u>lave-linge</u> est-il lancé...
+Q1130.label=NL_Combien de fois en semaine (du lundi au vendredi) le <u>sèche-linge</u> est-il lancé...
+Q1600.label=NL_Quelle est la surface chauffée entre 17 et 20h par des radiateurs électriques ? (0 si vous n'en avez pas)
+Q1210.label=NL_Combien de chauffes-eau électriques avez-vous ?
+Q1900.label=NL_Quelle est la puissance de votre pompe à chaleur en W ? (0 si vous n'en avez pas)
+Q1900.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
+Q1160.label=NL_Combien de fois repassez vous du lundi au vendredi ?
+Q1220.label=NL_Combien de frigos avez-vous ?
+Q1230.label=NL_Combien de congélateurs avez-vous ? (considérez uniquement les congélateurs non-intégrés dans les frigos)
+Q1700.label=NL_Nombre de jours par semaine (du lundi au vendredi) où la télévision est allumée entre 17 et 20h ?
+Q1750.label=NL_Pour votre éclairage, vous utilisez...
 
+Q1750.options.1.label=NL_principalement des ampoules économiques
+Q1750.options.2.label=NL_des ampoules économiques et halogènes
+Q1750.options.3.label=NL_principalement des ampoules classiques
+Q1750.options.4.label=NL_des ampoules classiques et halogènes
+
+Q1800.label=NL_Au cas où vous avez des <u>spots extérieurs</u> qui sont allumés en continu dès le coucher de soleil, donnez la puissance estimée en Watt pour l'ensemble de ces spots
+Q1800.low-value.warning=Etes vous sûr(e)? Cette valeur nous semble faible !
+Q2000.label=NL_Pour chacun des appareils merci d'indiquer votre habitude d'utilisation en semaine (du lundi au vendredi)
+Q2010.label=NL_Aspirateur
+Q2010.options.0.label=NL_quasiment jamais
+Q2010.options.1.label=NL_moins de 15 minutes par jour
+Q2010.options.2.label=NL_de 15 à 30 minutes par jour
+Q2010.options.4.label=NL_plus de 30 minutes par jour ou plus
+Q2020.label=NL_Sèche-cheveux
+Q2020.options.0.label=NL_quasiment jamais
+Q2020.options.1.label=NL_moins de 15 minutes par jour
+Q2020.options.2.label=NL_de 15 à 30 minutes par jour
+Q2020.options.4.label=NL_plus de 30 minutes par jour ou plus
+Q2030.label=NL_Micro-onde
+Q2030.options.0.label=NL_quasiment jamais
+Q2030.options.1.label=NL_moins de 15 minutes par jour
+Q2030.options.2.label=NL_de 15 à 30 minutes par jour
+Q2030.options.4.label=NL_plus de 30 minutes par jour ou plus
+Q2040.label=NL_Bouilloire
+Q2040.options.0.label=NL_quasiment jamais
+Q2040.options.1.label=NL_1 à 5 fois par jour
+Q2040.options.2.label=NL_5 à 10 fois par jour
+Q2040.options.4.label=NL_plus de 10 fois par jour
+Q1235.label=NL_Combien de voitures électriques dont vous chargez les batteries entre 17h et 20h avez-vous ?
+Q1140.label=NL_Du lundi au vendredi, combien de fois cuisinez-vous sur des plaques de cuisson électriques (0 si vous n'en avez pas) ?
+Q1150.label=NL_Du lundi au vendredi, combien de fois cuisinez-vous en semaine avec un four électrique (0 si vous n'en avez pas) ?
+# POTENTIAL REDUCTION (based on profile)
+profile.potential-average-power-reduction.label=NL_Mon potentiel en W
+profile.potential-consumption-reduction.label=NL_Mon Potentiel en kWh par jour sur la période 17h-20h
+# ACTIONS
+Q3210.label=NL_Eteindre ou débrancher tous les appareils fonctionnant à l'électricité (y compris l'éclairage, le chauffage électrique, les chauffes-eau électriques, les congélateurs, la pompe à chaleur, ...) et quitter la maison entre 17h et 20h
+Q3211.label=NL_En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
+Q3211.tooltip=<b>Le saviez-vous ?</b><br> Il est probable que les jours d'alerte se suivent en cas de froid !
+Q3110.label=NL_Programmer les démarrages de votre lave-vaisselle à 3h du matin (si pas de programmation possible, le lancer quand vous allez vous coucher)
+Q3120.label=NL_Programmer les démarrages de votre lave-linge à 3h du matin (si pas de programmation possible, le lancer quand vous allez vous coucher)
+Q3130.label=NL_Programmer les démarrages de votre sèche-linge à 3h du matin (si pas de programmation possible, le lancer quand vous allez vous coucher)
+Q3310.label=NL_Eteindre entre 17h et 20h vos radiateurs électriques
+Q3320.label=NL_Eteindre votre pompe à chaleur entre 17h et 20h
+Q3330.label=NL_Eteindre le(s) chauffe(s)-eau électrique(s) entre 17h et 20h
+Q3410.label=NL_Débrancher ou programmer l'interruption du (des) frigo(s) entre 17h et 20h
+Q3420.label=NL_Débrancher ou programmer l'interruption du (des) congélateur(s) entre 17h et 20h
+Q3420.tooltip=<b>Le saviez-vous ?</b><br> Un congélateur peut conserver les aliments en moyenne  pendant 24h après avoir été débranché.
+Q3510.label=NL_Réduire l'éclairage d'au moins 50% entre 17h et 20h
+Q3510.tooltip=Penzez à acheter des bougies à l'avance ou mettez des ampoules LED
+Q3530.label=NL_Eteindre vos spots extérieurs entre 17h et 20h
+Q3610.label=NL_Ne pas utiliser votre aspirateur entre 17h et 20h
+Q3620.label=NL_Ne pas utiliser votre sèche-cheveux entre 17h et 20h
+Q3630.label=NL_Ne pas allumer la télévision entre 17h et 20h
+Q3631.label=NL_En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
+Q3640.label=NL_Ne pas utiliser le fer à repasser entre 17h et 20h
+Q3810.label=NL_Ne pas recharger la voiture électrique entre 17h et 20h
+Q3710.label=NL_Manger froid, cuisiner avant 17h ou cuisiner après 20h
+Q3711.label=NL_En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
+Q3720.label=NL_Ne pas utiliser les plaques de cuisson électriques entre 17h et 20h
+Q3730.label=NL_Ne pas utiliser le four pour cuisiner entre 17h et 20h
+Q3740.label=NL_Inviter ... ménages (amis, famille, voisins, ...) à manger et leur demander de tout couper chez eux dès 17h
+Q3740.tooltip=Pensez surtout aux personnes qui cuisinent d'habitude sur des taques électriques ! ;-)
+Q3741.label=NL_En cas de jours d'alerte qui se suivent, pendant combien de jours d'affilée vous engagez-vous à réaliser cette action ?
+Q3750.label=NL_Ne pas utiliser votre micro-onde entre 17h et 20h
+Q3760.label=NL_Ne pas utiliser votre bouilloire entre 17h et 20h
+
+# EFFECTIVE REDUCTION (based on actions)
+action.effective-average-power-reduction.label=NL_Mes actions en W le premier jour d'alerte
+action.effective-consumption-reduction.label=NL_Mes actions en kWh par jour sur la période 17h-20h (premier jour d'alerte)
+
+# ACCOUNT
+account.personaldata.title=Informations d'inscription
+account.powerprovider.label=NL_Fournisseur d'électricité
+account.powerconsumercategory.label=NL_Votre consommation d'électricité annuelle
+powerconsumercategory.options.0.label=NL_Moins de 2500 kWh/an
+powerconsumercategory.options.1.label=NL_3501 à 4501 kWh/an
+powerconsumercategory.options.2.label=NL_4501 à 6000 kWh/an
+powerconsumercategory.options.3.label=NL_Plus de 6000 kWh/an
+powerconsumercategory.options.4.label=NL_Je ne sais pas
+account.otheremails.label=NL_Adresses e-mail de membres de votre ménage à qui nous pouvons également envoyer les alertes
+account.sensitizationkit.label=NL_ Je souhaite recevoir un kit de sensibilisation
+sensitizationkit.options.0.label=NL_pour mes collègues
+sensitizationkit.options.1.label=NL_mes voisins
+sensitizationkit.options.2.label=NL_mes amis
+account.info.summaryemail.label=NL_Vous allez recevoir un e-mail récapitulatif, qui vous permettra de confirmer votre inscription
+account.info.terms&conditions.label=NL_Conditions générales et politique de confidentialité
+account.info.repeatPassword=Répétez le mot de passe
+account.info.oldPassword=Votre ancien mot de passe
+account.info.newPassword=Votre nouveau mot de passe
+Q5210.options.0.label=NL_Belpower
+Q5210.options.1.label=NL_EBEM
+Q5210.options.2.label=NL_Ecopower
+Q5210.options.3.label=NL_Electrabel
+Q5210.options.4.label=NL_Elegant
+Q5210.options.5.label=NL_Eneco
+Q5210.options.6.label=NL_Energie2030
+Q5210.options.7.label=NL_Energy People
+Q5210.options.8.label=NL_eni
+Q5210.options.9.label=NL_Essent
+Q5210.options.10.label=NL_Lampiris
+Q5210.options.11.label=NL_Luminus
+Q5210.options.12.label=NL_Mega
+Q5210.options.13.label=NL_Octa+
+Q5210.options.14.label=NL_Poweo
+Q5210.options.15.label=NL_Tarif Social
+Q5210.options.16.label=NL_Trevion
+Q5210.options.17.label=NL_Wase Wind
+Q5210.options.18.label=NL_Watz
+Q5210.options.19.label=NL_Je ne sais pas
+account.errorMessage.firstName=NL_Entre 2 et 100 caractères
+account.errorMessage.lastName=NL_Entre 2 et 100 caractères
+account.errorMessage.emailAddress=NL_Adresse email non valide
+account.errorMessage.password=NL_Entre 5 et 18 caractères ou chiffres ou -_%
+account.errorMessage.repeatPassword=NL_Les deux mots de passe sont différents
+account.errorMessage.zip=NL_Entre 4 et 20 caractères
+account.errorMessage.terms=NL_Vous devez accepter les termes et conditions pour vous enregistrer
+account.info.term.button.consult=NL_Consulter les termes et conditions
+account.terms.modal.title=NL_Termes et conditions
+account.button.changePassword=NL_Changer de mot de passe
+account.button.changeEmail=NL_Changer d'adresse e-mail
+account.info.newEmail=NL_Votre nouvelle adresse e-mail
