--- a/conf/translation/Interfaces_nl.properties
+++ b/conf/translation/Interfaces_nl.properties
@@ -9,6 +9,7 @@ filter.toHour.hour.suffix=u
 filter.toSquareMeters.m2.suffix=m<sup>2</sup>
 filter.toWatts.w.suffix=W
 nav.to-actions=Naar de acties
+nav.back-to-welcome=Terug naar de startpagina
 nav.back-to-profile=Terug naar profiel
 nav.back-to-actions=Terug naar acties
 nav.to-identification=Afsluiten
